`Refactored login and external login pages with new design and functionality`

--- a/Da3wa.WebUI/appsettings.json
+++ b/Da3wa.WebUI/appsettings.json
@@ -1,6 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db37125.public.databaseasp.net; Database=db37125; User Id=db37125; Password=rQ?2-3Dj5Fe_; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;",
+    "DefaultConnection": "Server=db37125.public.databaseasp.net; Database=db37125; User Id=db37125; Password=rQ?2-3Dj5Fe_; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "YOUR_CLIENT_ID_HERE",
+      "ClientSecret": "YOUR_CLIENT_SECRET_HERE"
+    }
   },
   "Logging": {
     "LogLevel": {
