--- a/Da3wa.WebUI/Da3wa.WebUI.csproj
+++ b/Da3wa.WebUI/Da3wa.WebUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="10.0.1" />
@@ -20,6 +20,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>5b9ce64b-5b8b-4d6e-af63-bf07b84f14d4</UserSecretsId>
   </PropertyGroup>
 
 </Project>
