`Removed sensitive database connection string from appsettings.json`

--- a/Da3wa.WebUI/appsettings.json
+++ b/Da3wa.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db37125.public.databaseasp.net; Database=db37125; User Id=db37125; Password=rQ?2-3Dj5Fe_; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "DefaultConnection": "YOUR_CONNECTION_STRING_HERE"
   },
   "Authentication": {
     "Google": {
