--- a/Da3wa.WebUI/appsettings.json
+++ b/Da3wa.WebUI/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "YOUR_CONNECTION_STRING_HERE"
+    "DefaultConnection": ""
   },
   "Authentication": {
     "Google": {
-      "ClientId": "YOUR_CLIENT_ID_HERE",
-      "ClientSecret": "YOUR_CLIENT_SECRET_HERE"
+      "ClientId": "",
+      "ClientSecret": ""
     }
   },
   "Logging": {
