--- a/Da3wa.Application/Da3wa.Application.csproj
+++ b/Da3wa.Application/Da3wa.Application.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.4.1" />
+    <PackageReference Include="GemBox.Document" Version="2026.1.100" />
+    <PackageReference Include="GemBox.Presentation" Version="2026.1.100" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.7.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
